Improved feedback, added to tools, fixed time rendering, visibility of copy button

--- a/themes/arm-design-system-hugo-theme/static/css/cross-page.css
+++ b/themes/arm-design-system-hugo-theme/static/css/cross-page.css
@@ -10,16 +10,23 @@
 /* UNIVERSAL */
 /****************************************************/
 
-/* NOT WORKING, get Jo to help: Make font-size standard */
-/*body {
-        font-size: var(--ads-font-size-small);
+
+/* Font size hardcoding to fix ADS */
+ads-tag div {
+        font-size: 14px!important;
     }
-    @media (max-width: 576px) {
-        body {
-            font-size: var(--ads-font-size-large);
-        }
-    }
-*/    
+    
+p,
+li,
+code,
+div,
+table,
+input,
+label {
+    font-size: 16px!important;
+}
+
+    
 
 /* Hide breadcrumb when small screen. */
 @media (max-width: 576px) {
@@ -69,3 +76,9 @@ html[theme='sw-hub'] h1,h2,h3,h4,h5,h6 {
 }
 
 
+
+/* Learning Path and Tools list pages */
+.num-of-paths-text {
+    font-size: 18px!important;
+    font-weight: bold;
+}
